# MonkeyCAM

./: .gitignore  CMakeLists.txt  NOTICE  README.md  board-def.json  index.html  machine-tool-def.json  path-viewer.html  path-viewer.js  paths.js  setup_build  ski-def.json
Dist-4.0.1-77afefe/: MonkeyCAM-4.0.1-77afefe.dmg  README.md
Sample-output/: Sample-ski-base-cutout.nc  Sample-ski-core-alignment-marks.nc  Sample-ski-core-edge-groove.nc  Sample-ski-core-insert-holes.nc  Sample-ski-edge-trench.nc  Sample-ski-guide-holes.nc  Sample-ski-nose-tail-spacers.nc  Sample-ski-overview.html  Sample-ski-top-cutout.nc  Sample-ski-top-profile.nc  Sample-snowboard-base-cutout.nc  Sample-snowboard-core-alignment-marks.nc  Sample-snowboard-core-edge-groove.nc  Sample-snowboard-core-insert-holes.nc  Sample-snowboard-edge-trench.nc  Sample-snowboard-guide-holes.nc  Sample-snowboard-nose-tail-spacers.nc  Sample-snowboard-overview.html  Sample-snowboard-top-cutout.nc  Sample-snowboard-top-profile.nc  Sample-splitboard-base-cutout.nc  Sample-splitboard-core-alignment-marks.nc  Sample-splitboard-core-edge-groove.nc  Sample-splitboard-core-insert-holes.nc  Sample-splitboard-edge-trench.nc  Sample-splitboard-guide-holes.nc  Sample-splitboard-nose-tail-spacers.nc  Sample-splitboard-overview.html  Sample-splitboard-splitboard-center-trench.nc  Sample-splitboard-top-cutout.nc  Sample-splitboard-top-profile.nc
cli/: CMakeLists.txt  monkey-cam.cpp
clipper/: CMakeLists.txt
core/: CMakeLists.txt  arc-path.cpp  bezier-path.cpp  board-profile.cpp  board-profile.h  ellipse-path.cpp  gcode-writer.cpp  gcode-writer.h  insert-pack.cpp  insert-pack.h  machine.cpp  machine.h  mcfixed.cpp  mcfixed.h  overview-writer.cpp  overview-writer.h  paths.cpp  paths.h  point.cpp  point.h  shape-parts.cpp  shape-parts.h  shapes.cpp  shapes.h  version.h
docs/: Configuration_Guide.md  G-Code_Program_Guide.md  Users_Guide.md
engine/: .gitignore  CMakeLists.txt  Dockerfile  build-docker.sh
engine/cli/: CMakeLists.txt  monkey-cam.cpp
engine/clipper/: CMakeLists.txt  README.md
engine/core/: CMakeLists.txt  arc-path.cpp  bezier-path.cpp  board-profile.cpp  board-profile.h  ellipse-path.cpp  gcode-writer.cpp  gcode-writer.h  insert-pack.cpp  insert-pack.h  machine.cpp  machine.h  mcfixed.cpp  mcfixed.h  overview-writer.cpp  overview-writer.h  paths.cpp  paths.h  point.cpp  point.h  shape-parts.cpp  shape-parts.h  shapes.cpp  shapes.h
engine/docs/: Configuration_Guide.md  G-Code_Program_Guide.md  Users_Guide.md
engine/test/: CMakeLists.txt  test.cpp
engine/util/: CMakeLists.txt  MonkeyCAMConfig.h.in  activity-emitter.cpp  activity-emitter.h  basic-math.cpp  basic-math.h  config.cpp  config.h  json.hpp
example/: RunMonkeyCamBoard.bat  RunMonkeyCamSki.bat  binding-def.json  board-binding-def.json  board-def.json  machine-tool-def.json  ski-binding-def.json  ski-def.json  splitboard-binding-def.json  splitboard-def.json
example/Outputs/: Sample-ski-base-cutout.nc  Sample-ski-core-alignment-marks.nc  Sample-ski-core-edge-groove.nc  Sample-ski-edge-trench.nc  Sample-ski-guide-holes.nc  Sample-ski-nose-tail-spacers.nc  Sample-ski-overview.html  Sample-ski-top-cutout.nc  Sample-ski-top-profile.nc
js/: basic-math.js  designer-viewer.js  path-viewer.js  paths.js  shape-parts.js
js/three.js-r61-0-g5834622/: Detector.js  TrackballControls.js
test/: misc.cpp  test.cpp
util/: CMakeLists.txt  MonkeyCAMConfig.h.in  activity-emitter.cpp  activity-emitter.h  basic-math.cpp  basic-math.h  config.cpp  svg-writer.cpp  svg-writer.h
webapp/cfuncs/: .gcloudignore  .gitignore  MonkeyCAMJob.js  index.js  package-lock.json  package.json  testhost.js
webapp/client/: .gcloudignore  README.md  app.yaml  package-lock.json  package.json
webapp/client/public/: index.html  manifest.json
webapp/client/src/: AboutPage.js  App.css  App.js  App.test.js  AppFooter.js  AppHeader.js  CommonComponents.js  DesignPage.js  DocsPage.js  HomePage.js  JobExecutionPage.js  JobResultsPage.js  LoginPage.js  TourPage.js  index.css  index.js  registerServiceWorker.js  setupProxy.js  withRouter.js
webapp/worker/: .dockerignore  .gitignore  CLOUDRUN.md  Dockerfile  MonkeyCAMJob.js  README.md  config.js  config.json  gce-config.json  monkeycam-worker-app.conf  package-lock.json  package.json  worker.js
